--- a/1-nginx/index.html
+++ b/1-nginx/index.html
@@ -1,40 +1,38 @@
-<!doctype html>
-<html class="no-js" lang="">
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-body {
-    background: #3498db;
-    font-family: sans-serif;
-}
-h1 {
-    position: relative;
-    color: rgba(0, 0, 0, .3);
-    font-size: 5em
-}
-h1:before {
-    content: attr(data-text);
-    position: absolute;
-    overflow: hidden;
-    max-width: 7em;
-    white-space: nowrap;
-    color: #fff;
-    animation: loading 8s linear;
-}
-@keyframes loading {
-    0% {
-        max-width: 0;
-    }
-}
-</style>
+<!DOCTYPE html>
+<html lang="zxx" class="no-js">
 
-    </head>
-    <body>
-        <h1 style="width:400px; margin:auto auto;" data-text="NGINX...">NGINX...</h1>
+<head>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="UTF-8">
+    <title>Dockerize Web App</title>
+    <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/hack-font@3/build/web/hack.css">
+    <link rel="stylesheet" href="assets/css/main.css">
+</head>
 
-    </body>
+<body>
+    <div class="body-wrap">
+        <div class="banner-area relative container ">
+            <div class="left-container">
+                <h1>1. Nginx</h1>
+                <p>Objective: build image and run container based on nginx with content mapped from host hard drive</p>
+                <pre>
+                0. Image command:
+                docker image --help
+
+                1. Build Image:
+                docker image build -t test-nginx . 
+                
+                2. Run container
+                docker container run --rm -it -p 8081:80 --name test-nginx -v $PWD:/www/myapp test-nginx
+                </pre>
+            </div>
+            <div class="right-container">
+                <img src="assets/img/gdg-big.png" alt="" class="">
+            </div>
+        </div>
+    </div>
+    <div class="grid-wrapper">
+    </div>
+</body>
+
 </html>
