[+] Created lesson 2 index.php with commands executed

--- a/1-nginx/index.html
+++ b/1-nginx/index.html
@@ -13,7 +13,7 @@
     <div class="body-wrap">
         <div class="banner-area relative container ">
             <div class="left-container">
-                <h1>1. Nginx</h1>
+                <h1>1-nginx</h1>
                 <p>Objective: build image and run container based on nginx with content mapped from host hard drive</p>
                 <pre>
                 0. Image command:
