--- a/1-nginx/index.html
+++ b/1-nginx/index.html
@@ -22,7 +22,10 @@
                 1. Build Image:
                 docker image build -t test-nginx . 
                 
-                2. Run container
+                2. Run container:
+                docker container run --rm -it -p 8081:80 --name test-nginx test-nginx
+
+                3. Run container without COPYing content and using volume mapping instead:
                 docker container run --rm -it -p 8081:80 --name test-nginx -v $PWD:/www/myapp test-nginx
                 </pre>
             </div>
